--- a/app/assets/stylesheets/mixins.css.scss
+++ b/app/assets/stylesheets/mixins.css.scss
@@ -5,3 +5,28 @@
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+
+@mixin submit-button($color: #6f5499) {
+    margin-top: 20px;
+    background-color: $color;
+    border: none;
+    box-shadow: none;
+    background-image: none;
+    text-shadow: none;
+    color: white;
+    padding: 10px 0;
+}
+
+@mixin slide($start: 0, $end: 50px, $duration: 0.25s, $delay: 0.1s) {
+    -webkit-animation: slideIn $duration $delay forwards ease;
+    -moz-animation: slideIn $duration $delay forwards ease;
+    -o-animation: slideIn $duration $delay forwards ease;
+    -ms-animation: slideIn $duration $delay forwards ease;
+    animation: slideIn $duration $delay forwards ease;
+
+
+    @keyframes slideIn {
+      0%   {left: $start;}
+      100% {left: $end;}
+    }
+}
