--- a/app/views/static_pages/redeem_credits.html.erb
+++ b/app/views/static_pages/redeem_credits.html.erb
@@ -17,7 +17,7 @@
     <%= f.hidden_field :cashout_type %>
     <div class="cash-out">
       <p class="page-title">Cash Type</p>
-      <ul>
+      <ul class="cash-out__list">
         <li class="paypal-choice">
         		<img src="/assets/paypal.png">
             <span class='cash-out__cost'>Cashout with PayPal</span>
