fixed issue with floating +25 icon

--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -207,9 +207,8 @@
                         </div> <!--/.share-dialog -->
 
                         <%= link_to refer_path do %>
-                            <i class="fa fa-user-plus">
-                                <span class="earn">+25</span>
-                            </i>
+                            <i class="fa fa-user-plus"></i>
+                            <span class="earn">+25</span>
                         <% end %>
                     </div>
                 </div>
