fixed trello issues: ToS/PP | way to contact us | share font bigger | Cash Type rewording | Paypal information | floating +25 issue

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -435,7 +435,7 @@ textarea {
 .refer-heading {
   background-color: $white;
   padding: 10px;
-  font-size: 12px;
+  font-size: 14px;
 }
 .redeemCredits__desc {
   margin: -5px 0 0;
@@ -832,7 +832,7 @@ p {
   span {
     font-size: 12px;
   }
-  .fa-user-plus {
+  .fa {
     font-size: 18px;
   }
 }
