--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -128,7 +128,12 @@
                             <span class='survey-credits'>+100</span>
                         </li>
                         <% end %>
-
+                        <a href="mailto:support@getluckee.com" target="_top">
+                            <li>
+                                <i class="fa fa-envelope-o"></i>
+                                Contact Us
+                            </li>
+                        </a>
                         <%= link_to edit_user_path(current_user) do %>
                         <li class="side-nav__settings">
                             <%= embedded_svg('svgs/icons/gear42.svg', :class => 'settings-icon') %>
