--- a/app/views/static_pages/home_mobile.html.erb
+++ b/app/views/static_pages/home_mobile.html.erb
@@ -5,8 +5,8 @@
 </div>
 <div class='mobile-home-footer'>
 	<div class='footer-links'>
-		<a href="/assets/luckee_TOS.pdf"  target="_blank"  class='privacy-link'>Privacy Policy</a>
-		<a href="/assets/luckee_privacy_policy.pdf"  target="_blank"  class='terms-link'>Terms of Service</a>
+		<a href="/assets/luckee_privacy_policy.pdf"  target="_blank"  class='privacy-link'>Privacy Policy</a>
+		<a href="/assets/luckee_TOS.pdf"  target="_blank"  class='terms-link'>Terms of Service</a>
 	</div>
 </div>
 <div class='home-bottom'>
