--- a/app/views/static_pages/redeem_credits.html.erb
+++ b/app/views/static_pages/redeem_credits.html.erb
@@ -16,16 +16,16 @@
     <%= f.hidden_field :credits, :value => @amount %>
     <%= f.hidden_field :cashout_type %>
     <div class="cash-out">
-      <p class="page-title">Cash Type</p>
+      <p class="page-title">Cash</p>
       <ul class="cash-out__list">
         <li class="paypal-choice">
         		<img src="/assets/paypal.png">
-            <span class='cash-out__cost'>Cashout with PayPal</span>
+            <span class='cash-out__cost'>Cash out with PayPal</span>
             <i class="fa fa-angle-right cash-choice"></i>
         </li>
         <li class="venmo-choice">
         		<img src="/assets/venmo.png">
-            <span class='cash-out__cost'>Cashout with Venmo</span>
+            <span class='cash-out__cost'>Cash out with Venmo</span>
             <i class="fa fa-angle-right cash-choice"></i>
         </li>
       </ul>
@@ -37,7 +37,7 @@
 
       		<%= text_field_tag "last_name","Last Name", :value => current_user.lastname, placeholder: "Last Name" %>
 
-      		<%= text_field_tag "email","email", :value => current_user.email, placeholder: "Email" %>
+      		<%= text_field_tag "email","Email", :value => "", placeholder: "Email" %>
       </div> <!--/.paypal-select -->
       <div class='venmo-select'>
   	    <%= f.text_field "venmo", placeholder: "Venmo username"%>
