started updating survey post styles

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -432,7 +432,7 @@ textarea {
   background-color: $white;
   padding: 10px 10px 20px;
 }
-.refer-heading {
+.intro-copy {
   background-color: $white;
   padding: 10px;
   font-size: 14px;
