--- a/app/views/surveys/show_mobile.html.erb
+++ b/app/views/surveys/show_mobile.html.erb
@@ -1,36 +1,47 @@
 	<p id="notice"><%= notice %></p>
 
-	Answer these questions and receive <%= @survey.credits %> credits! <br />
-	<div class='survey-container'>
-	<p>1. How frequently do you work out? </p>
-	0 times per week: <%= radio_button 'workout', 'frequency', '0 times per week', :required => true %><br />
-	1-3 times per week: <%= radio_button 'workout', 'frequency', '1-3 times per week' %><br />
-	4+times per week <%= radio_button 'workout', 'frequency', '4+ times per week' %>
+	<p class="intro-copy">Answer these questions and receive <%= @survey.credits %> credits!</p>
 
-		<p>2. Where do you prefer to work out?</p>
-		In a home/personal gym <%= radio_button 'workout', 'location', 'home/personal gym' %><br />
-		In a local gym <%= radio_button 'workout', 'location', 'local gym' %><br />
-		Outside <%= radio_button 'workout', 'location', 'outside' %><br />
+	<div class="refer-friend">
+	 	<p class="redeemCredits__title">Complete Survey:</p>
 
-		<p>3. Have you ever tried CrossFit or Iron Tribe?</p>
-		Yes: <%= radio_button 'cross-iron', 'yesno', 'yes' %><br />
-		No: <%= radio_button 'cross-iron', 'yesno', 'no' %><br />
+	 	<div class="survey__question">
+			<p>1. How frequently do you work out? </p>
+			0 times per week: <%= radio_button 'workout', 'frequency', '0 times per week', :required => true %><br />
+			1-3 times per week: <%= radio_button 'workout', 'frequency', '1-3 times per week' %><br />
+			4+times per week <%= radio_button 'workout', 'frequency', '4+ times per week' %>
+		</div>
 
-		<p>4. What is your experience with health / workout supplements?</p>
-		Never taken any: <%= radio_button 'supplements', 'taken', 'never' %><br />
-		I have taken them in the past but do not now: <%= radio_button 'supplements', 'taken', 'past' %><br />		
-		I currently take a vitamin/supplement<%= radio_button 'supplements', 'taken', 'current' %>	<br />
-		<p>5. Have you ever heard of ClassPass?</p>
-		Yes: <%= radio_button 'classpass', 'yesno', 'yes' %><br />
-		No: <%= radio_button 'classpass', 'yesno', 'no' %>	<br />
-	</div>
+		<div class="survey__question">
+			<p>2. Where do you prefer to work out?</p>
+			In a home/personal gym <%= radio_button 'workout', 'location', 'home/personal gym' %><br />
+			In a local gym <%= radio_button 'workout', 'location', 'local gym' %><br />
+			Outside <%= radio_button 'workout', 'location', 'outside' %><br />
+		</div>
 
-	<%= form_for(@user_survey) do |f| %>
-		<%= f.hidden_field :id %>
-		<%= f.hidden_field :complete, :value => true %>
-		<%= f.submit 'Submit Survey' %>
-	<% end %>
+		<div class="survey__question">
+			<p>3. Have you ever tried CrossFit or Iron Tribe?</p>
+			Yes: <%= radio_button 'cross-iron', 'yesno', 'yes' %><br />
+			No: <%= radio_button 'cross-iron', 'yesno', 'no' %><br />
+		</div>
 
-	<br />
-	<%= link_to 'Back', surveys_path %>
+		<div class="survey__question">
+			<p>4. What is your experience with health / workout supplements?</p>
+			Never taken any: <%= radio_button 'supplements', 'taken', 'never' %><br />
+			I have taken them in the past but do not now: <%= radio_button 'supplements', 'taken', 'past' %><br />
+			I currently take a vitamin/supplement<%= radio_button 'supplements', 'taken', 'current' %>	<br />
+		</div>
+
+		<div class="survey__question">
+			<p>5. Have you ever heard of ClassPass?</p>
+			Yes: <%= radio_button 'classpass', 'yesno', 'yes' %><br />
+			No: <%= radio_button 'classpass', 'yesno', 'no' %>	<br />
+		</div>
+
+		<%= form_for(@user_survey) do |f| %>
+			<%= f.hidden_field :id %>
+			<%= f.hidden_field :complete, :value => true %>
+			<%= f.submit 'Submit Survey' %>
+		<% end %>
+	</div> <!--/.refer-friend -->
 
