fixed css issue that was breaking stylesheet

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -133,7 +133,7 @@ textarea {
   }
 }
 .survey__question {
-  border-bottom: 1px solid $clouds
+  border-bottom: 1px solid $clouds;
   margin-bottom: 10px;
   padding-bottom: 10px;
 }
