changed survey markup

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -137,6 +137,9 @@ textarea {
   margin-bottom: 10px;
   padding-bottom: 10px;
 }
+.survey__question-copy {
+  margin: 0;
+}
 .survey__question:last-child {
   border-bottom: none;
 }
