--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,28 +1,27 @@
 <p id="notice"><%= notice %></p>
 
-<p class="intro-copy">Answer these questions and receive <%= @survey.credits %> credits!</p>
+Answer these questions and receive <%= @survey.credits %> credits! <br />
 
-<div class="refer-friend">
-  <p class="redeemCredits__title">Complete Survey:</p>
+<p>1. How frequently do you work out? </p>
+Pepsi: <%= radio_button 'workout', 'frequency', '0 times per week', :required => true %>
+Coke: <%= radio_button 'workout', 'frequency', '1-3 times per week' %>
+Other: <%= radio_button 'workout', 'frequency', '4+ times per week' %>
 
-  <p>1. How frequently do you work out? </p>
-  Pepsi: <%= radio_button 'workout', 'frequency', '0 times per week', :required => true %>
-  Coke: <%= radio_button 'workout', 'frequency', '1-3 times per week' %>
-  Other: <%= radio_button 'workout', 'frequency', '4+ times per week' %>
+<p>2. What is your favorite type of soda? </p>
+Pepsi: <%= radio_button 'soda', 'type', 'pepsi' %>
+Coke: <%= radio_button 'soda', 'type', 'coke' %>
+Other: <%= radio_button 'soda', 'type', 'other' %>
 
-  <p>2. What is your favorite type of soda? </p>
-  Pepsi: <%= radio_button 'soda', 'type', 'pepsi' %>
-  Coke: <%= radio_button 'soda', 'type', 'coke' %>
-  Other: <%= radio_button 'soda', 'type', 'other' %>
+<p>3. What is your favorite type of soda? </p>
+Pepsi: <%= radio_button 'soda', 'type', 'pepsi' %>
+Coke: <%= radio_button 'soda', 'type', 'coke' %>
+Other: <%= radio_button 'soda', 'type', 'other' %>
+<%= form_for(@user_survey) do |f| %>
+	<%= f.hidden_field :id %>
+	<%= f.hidden_field :complete, :value => true %>
+	<%= f.submit 'Submit Survey' %>
+<% end %>
 
-  <p>3. What is your favorite type of soda? </p>
-  Pepsi: <%= radio_button 'soda', 'type', 'pepsi' %>
-  Coke: <%= radio_button 'soda', 'type', 'coke' %>
-  Other: <%= radio_button 'soda', 'type', 'other' %>
-  <%= form_for(@user_survey) do |f| %>
-  	<%= f.hidden_field :id %>
-  	<%= f.hidden_field :complete, :value => true %>
-  	<%= f.submit 'Submit Survey' %>
-  <% end %>
-</div>
+<br />
+<%= link_to 'Back', surveys_path %>
 
