--- a/app/views/static_pages/refer.html.erb
+++ b/app/views/static_pages/refer.html.erb
@@ -4,5 +4,9 @@
 	<div class="refer-friend">
     <p class="redeemCredits__title">Copy &amp; Share:</p>
     <p class="redeemCredits__link"><%= request.host_with_port %>/invite/<%=@referal_code %></p>
+
+    <div class="refer-friend__copy-button">
+      <button class="zclip" data-zclip-text="<%= request.host_with_port %>/invite/<%=@referal_code %>">Click to Copy</button>
+    </div>
   </div>
 </div>
