--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -153,6 +153,11 @@ textarea {
   border-bottom: 1px solid $clouds;
   margin-bottom: 10px;
   padding-bottom: 10px;
+
+  input[type="radio"] {
+      position: relative;
+      bottom: 4px;
+  }
 }
 .survey__question-copy {
   margin: 0;
@@ -243,7 +248,7 @@ textarea {
   margin-bottom: 10px;
 }
 .email-signup{
-  width:90%;
+  width: 80%;
   z-index:10;
   margin:auto;
   display:block;
