--- a/app/assets/stylesheets/mixins.css.scss
+++ b/app/assets/stylesheets/mixins.css.scss
@@ -14,7 +14,7 @@
     background-image: none;
     text-shadow: none;
     color: white;
-    padding: 10px 0;
+    padding: 10px 20px;
 }
 
 @mixin slide($function: slideIn, $duration: 0.5s, $delay: 0s) {
