--- a/app/views/static_pages/home_mobile.html.erb
+++ b/app/views/static_pages/home_mobile.html.erb
@@ -17,7 +17,7 @@
 		<%= embedded_svg('svgs/trees_and_low_hills.svg', :class => 'tree-hills') %>
 	</div>
 	<div class='bottom-content'>
-    <%= image_tag 'white_down.png', :class => 'white-down' %>
+    <%= image_tag 'white_down.png', :class => 'white-down floating' %>
 			<h2>How it Works </h2>
     		<%= embedded_svg('svgs/bottom_image_1.svg', :class => 'how-it-works-image') %>
     		<p>Play any game to<br/> earn credits</p>
