--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -442,6 +442,9 @@ textarea {
     right: 0%;
     bottom: 30px;
   }
+  .floating{
+    @include floating();
+  }
 }
 .center {
   text-align: center;
