updating email, adding order for games

--- a/app/views/user_notifier/send_welcome_email.html.erb
+++ b/app/views/user_notifier/send_welcome_email.html.erb
@@ -1,7 +1,6 @@
-Hi there, I see you just signed up for the Luckee beta, welcome!  We will be adding new games and features in the coming days, and we could really use your feedback.  Please let me know what you like about the site, as well as anything you would like to see added and improved upon. Feel free to email me anytime with feedback and suggestions!
-
-Have fun, and thank you for your support!
-
--Griff,
-
-Founder and CEO of Luckee
+Hi there, I see you just signed up for the Luckee beta, welcome!  We will be adding new games and features in the coming days, and we could really use your feedback.  Please let me know what you like about the site, as well as anything you would like to see added and improved upon. Feel free to email me anytime with feedback and suggestions!<<<br />
+Have fun, and thank you for your support!<br />
+<br />
+-Griff,<br />
+<br />
+Founder of Luckee
