--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -413,7 +413,7 @@ textarea {
   }
   .bottom-content{
     z-index:1;
-    background:url('/assets/svgs/bottom_background.svg') $dark-blue;
+    background:url('/assets/bottom_background.jpg') $dark-blue;
     background-size:contain;
     position:relative;
     bottom:150px;
