--- a/app/views/users/_form_mobile.html.erb
+++ b/app/views/users/_form_mobile.html.erb
@@ -1,5 +1,5 @@
 <div class='mobile-form'>
-    <div class="welcome-box-m">Play Games. Earn Cash.</div>
+    <div class="welcome-box-m">Play free games. Earn real cash.</div>
     <%= link_to "/auth/facebook" do %>
       <%= image_tag 'facebook_button.png', :class => 'facebook-signup' %>
     <% end %>
